[tool.poetry]
name = "pinbridge-python-examples"
version = "0.1.0"
description = "Runnable examples and smoke tests for the PinBridge Python SDK"
authors = ["PinBridge"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pinbridge-sdk = { path = "../python-sdk", develop = true }

[tool.poetry.group.dev.dependencies]
black = ">=24.0.0,<25.0.0"
pytest = ">=8.0.0,<9.0.0"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
